kubernetes/applications/adventurelog/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventurelog-backend
  namespace: adventure
  labels:
    app: adventure-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adventure-backend
  template:
    metadata:
      name: adventure-backend
      labels:
        app: adventure-backend
    spec:
      volumes:
        - name: adventure-journal
          persistentVolumeClaim:
            claimName: adventure-journal-pvc
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: adventure-backend
          image: ghcr.io/seanmorley15/adventurelog-backend:v0.12.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: adventure-journal
              mountPath: /code/media
      restartPolicy: Always
