kubernetes/applications/adventurelog/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-backend
  namespace: adventure
spec:
  selector:
    app: adventure-backend
  ports:
    - name: base
      protocol: TCP
      port: 8000
      targetPort: 8000
